hard-gists/1795840/run.log
=== Docker Run Log for 1795840 ===
Started at: Mi 29. Okt 12:29:47 CET 2025

[2025-10-29 12:29:48] START: Running container for 1795840
[2025-10-29 12:29:48] SUCCESS: Container 7ba4ff6fda272725451da7f2ef5e0230f75e7d6d181e52da38dbac0c9ef0b301 started for 1795840
=== Container logs for 1795840 ===
  File "/snippet.py", line 17
    print "no mesh selected !"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1795840 ===
[2025-10-29 12:29:50] INFO: Container 7ba4ff6fda272725451da7f2ef5e0230f75e7d6d181e52da38dbac0c9ef0b301 has stopped
